--- a/base.css
+++ b/base.css
@@ -21,6 +21,11 @@ body {
 }
 
 .image {
+  width: 900px;
+  max-width: 100%;
+  height: auto;
+  margin-right: auto;
+  margin-left: auto;
   position: relative;
   padding: 0;
 }
