--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -76,10 +76,21 @@ h2 {
 
 table{
   border-collapse: collapse;
+  width: 500px;
   margin:0 auto;
+  color: white;
+  background: #00aabb;
   th, td{
-    border: solid 1px black;
+    border: solid 1px white;
     padding: 8px;
+  }
+  tr{
+    &.even{
+      background: #00aabb;
+    }
+    &.odd{
+      background: #88aacc;
+    }
   }
 }
 
