疑似要素練習始めた

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,13 @@ body {
   border-bottom: solid 20px #009955;
 }
 
+h1::after {
+  content: '～No.45 Laboratory～';
+  font-size: 70%;
+  color: gold;
+  display: block;
+}
+
 .image {
   width: 900px;
   max-width: 100%;
