--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -21,6 +21,15 @@ body {
   border-bottom: solid 20px #009955;
 }
 
+h1 {
+  &::after {
+    content: '～No.45 Laboratory～';
+    font-size: 70%;
+    color: gold;
+    display: block;
+  }
+}
+
 .image {
   width: 900px;
   max-width: 100%;
