疑似要素で見出しの前にFontAwesomeのアイコンを表示させた

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -30,6 +30,19 @@ h1 {
   }
 }
 
+h2 {
+  color: orange;
+}
+
+h3 {
+  &::before{
+    font-family: "Font Awesome 5 Free";
+    content: '\f00c';
+    font-weight: 900; 
+    padding-right : 5px;/*文字との隙間*/
+    color: #f89174;/*アイコンの色*/
+  }
+}
 .image {
   width: 900px;
   max-width: 100%;
@@ -67,9 +80,6 @@ img {
   height: auto;
 }
 
-h2 {
-  color: orange;
-}
 
 .main p span {
   color: red;
