--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,20 @@ h1::after {
   display: block;
 }
 
+h2 {
+  color: orange;
+}
+
+h3::before {
+  font-family: "Font Awesome 5 Free";
+  content: '\f00c';
+  font-weight: 900;
+  padding-right: 5px;
+  /*文字との隙間*/
+  color: #f89174;
+  /*アイコンの色*/
+}
+
 .image {
   width: 900px;
   max-width: 100%;
@@ -63,10 +77,6 @@ img {
   width: 900px;
   max-width: 100%;
   height: auto;
-}
-
-h2 {
-  color: orange;
 }
 
 .main p span {
